<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/favoritesFragment"
            android:icon="@drawable/heart"
            android:title="@string/activity_main_drawer_title_favorites" />
        <item
            android:id="@+id/cartFragment"
            android:icon="@drawable/cart"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/usuario_icon"
            android:title="@string/menu_profile" />

    </group>
</menu>