<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scVpp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@null">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.main.home.newcategory.NewCategoryFragment"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvNewCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/fragment_new_category_tvnewcategory_nuevacategoria"
            android:textAlignment="center"
            android:textColor="@color/title"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imvNewcategory"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/amarillo_limon_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNewCategory" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/tilNameCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imvNewcategory">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNameCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_new_category_edt_name_newcategory"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCreateNewCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/fragment_new_category_btn_createnewcategory"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilNameCategory" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
